--- a/frontend/css/stylesIndex.css
+++ b/frontend/css/stylesIndex.css
@@ -15,11 +15,27 @@ body{
     align-items: center;
 
 }
+.res{
+    background-color:transparent;
+}
+
+.card{
+    background-color:rgb(19, 19, 19);
+    color:white;
+}
+.resImg{
+    width: 70%;
+    height: auto;
+    margin-left: 48px;
+    margin-right: 30px;
+    margin-bottom: 20px;
+    background-color: transparent;
+}
 
 .resultP{
     background-color : rgb(27, 27, 27);
     border-radius: 20px;
     width : 350px;
-    height : 320px;
+    height : auto;
     
 }
